# ynov-2026-m2-sysemb-ia-embarque-demo

./: README.md  cars.bidule  person.json  pyproject.toml  telemetries.csv
src/ynov_m2_sysemb_demo/: cars.py  file.py  statistics_demo.py  toto.py
